cabal-version: 2.2
name: servant-auth-cloudflare-workers
version: 0.4.9.0
synopsis: servant-cloudflare-workers/servant-auth compatibility
description:
  This package provides the required instances for using the @Auth@ combinator
  in your 'servant' cloudflare workers.
  .
  Both cookie- and token- (REST API) based authentication is provided.

category: Web, Servant, Authentication
homepage: https://github.com/haskell-servant/servant/tree/master/servant-auth#readme
bug-reports: https://github.com/haskell-servant/servant/issues
author: Hiromi ISHII
maintainer: konn.jinro_at_gmail.com
copyright: (c) 2016-2024 Julian K. Arni, 2024-present Hiromi ISHII
license: BSD-3-Clause
license-file: LICENSE
tested-with: ghc ==9.2.8 || ==9.4.8 || ==9.6.4 || ==9.8.2 || ==9.10.1
build-type: Simple
extra-source-files:
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/haskell-servant/servant

library
  hs-source-dirs: src
  default-extensions:
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    KindSignatures
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeFamilies
    TypeOperators

  if !os(wasi)
    build-depends: ghc-wasm-compat
    ghc-options:
      -fplugin
      GHC.Wasm.FFI.Plugin
  ghc-options: -Wall
  build-depends:
    aeson >=1.0.0.1 && <3,
    attoparsec-aeson,
    base >=4.16.4.0 && <4.21,
    base64-bytestring >=1.0.0.1 && <2,
    blaze-builder >=0.4.1.0 && <0.5,
    bytestring >=0.11 && <0.13,
    case-insensitive >=1.2.0.11 && <1.3,
    cloudflare-worker,
    cookie >=0.4.4 && <0.6,
    data-default-class >=0.1.2.0 && <0.2,
    ghc-wasm-jsobjects,
    http-types >=0.12.2 && <0.13,
    mtl ^>=2.2.2 || ^>=2.3.1,
    safe-exceptions,
    servant >=0.20.2 && <0.21,
    servant-auth-lite >=0.4.2.0 && <0.5,
    servant-cloudflare-workers >=0.20.2 && <0.21,
    streaming,
    streaming-attoparsec,
    streaming-bytestring,
    tagged >=0.8.4 && <0.9,
    text >=1.2.3.0 && <2.2,
    time,
    unordered-containers >=0.2.9.0 && <0.3,
    wasm-linear-base,
    web-sys-hs,

  build-depends: base64-bytestring >=1.2.1.0
  -- cabal-gild: discover src
  exposed-modules:
    Servant.Auth.Cloudflare.Workers
    Servant.Auth.Cloudflare.Workers.Internal
    Servant.Auth.Cloudflare.Workers.Internal.BasicAuth
    Servant.Auth.Cloudflare.Workers.Internal.Class
    Servant.Auth.Cloudflare.Workers.Internal.ConfigTypes
    Servant.Auth.Cloudflare.Workers.Internal.JWT
    Servant.Auth.Cloudflare.Workers.Internal.ThrowAll
    Servant.Auth.Cloudflare.Workers.Internal.Types

  default-language: Haskell2010

test-suite readme
  buildable: False
  type: exitcode-stdio-1.0
  main-is: README.lhs
  default-extensions:
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    KindSignatures
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeFamilies
    TypeOperators

  ghc-options:
    -Wall
    -pgmL
    markdown-unlit

  build-tool-depends: markdown-unlit:markdown-unlit
  build-depends:
    aeson,
    base,
    mtl,
    servant-auth,
    servant-auth-cloudflare-workers,
    servant-cloudflare-workers,
    warp,

  default-language: Haskell2010

  if impl(ghcjs >=0)
    buildable: False

test-suite spec
  buildable: False
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
    test

  default-extensions:
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    KindSignatures
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeFamilies
    TypeOperators

  ghc-options: -Wall
  build-tool-depends: hspec-discover:hspec-discover >=2.5.5 && <2.12
  -- dependencies with bounds inherited from the library stanza
  build-depends:
    aeson,
    base,
    bytestring,
    case-insensitive,
    http-types,
    lens,
    mtl,
    servant,
    servant-cloudflare-workers,
    time,
    transformers,

  -- test dependencies
  build-depends:
    QuickCheck >=2.11.3 && <2.16,
    hspec >=2.5.5 && <2.12,
    http-client >=0.5.13.1 && <0.8,
    lens-aeson >=1.0.2 && <1.3,
    servant-auth-cloudflare-workers,
    servant-cloudflare-workers,
    text >=1.2.3.0 && <2.2,
    warp >=3.2.25 && <3.5,
    wreq >=0.5.2.1 && <0.6,

  other-modules:
    Servant.Auth.Cloudflare.WorkersSpec

  default-language: Haskell2010
